Fix some minor grammar issues in index.html.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ ga('send', 'pageview');
 
                 <p>
                     SpotBugs is the spiritual sucessor of <a href="http://findbugs.sourceforge.net/">FindBugs</a>,
-                    carrying on from the point where it left off with support of it's community.
+                    carrying on from the point where it left off with the support of its community.
                 </p>
 
                 <p>
