New friendlier(?) webpage
 - Simpler, cleaner design, mobile friendly.

--- a/bugDescriptions.html
+++ b/bugDescriptions.html
@@ -1,49 +1,25 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html><head><META http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>FindBugs Bug Descriptions</title>
-<link rel="stylesheet" type="text/css" href="spotbugs.css"/>
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
+<html><head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <title>SpotBugs Bug Descriptions</title>
 </head><body>
+    <header>
+      <div class="inner">
+        <h1><a href="/index.html">SpotBugs <img src="spotbugs-icon.png" /></a></h1>
+        <h2>Find bugs in Java Programs</h2>
+        <a href="https://github.com/spotbugs/spotbugs" class="button"><small>Check it out on</small> GitHub</a>
+      </div>
+    </header>
+    <div id="content-wrapper">
+      <div class="inner clearfix">
+        <section id="main-content">
 
-<table width="100%"><tr>
-
-<td bgcolor="#b9b9fe" valign="top" align="left" width="20%"> 
-<table width="100%" cellspacing="0" border="0"> 
-<tr><td><a class="sidebar" href="index.html"><img width="200px" src="spotbugs-icon.png" alt="SpotBugs"></a></td></tr> 
-
-<tr><td>&nbsp;</td></tr>
-
-<tr><td><b>Docs and Info</b></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="factSheet.html">Fact sheet</a></font></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="manual/index.html">Manual</a></font></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="ja/manual/index.html">Manual(ja/&#26085;&#26412;&#35486;)</a></font></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="FAQ.html">FAQ</a></font></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="bugDescriptions.html">Bug descriptions</a></font></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="bugDescriptions_ja.html">Bug descriptions(ja/&#26085;&#26412;&#35486;)</a></font></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="bugDescriptions_fr.html">Bug descriptions(fr)</a></font></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="links.html">Links</a></font></td></tr> 
-
-<tr><td>&nbsp;</td></tr>
-
-<tr><td><a class="sidebar" href="downloads.html"><b>Downloads</b></a></td></tr> 
-
-
-<tr><td>&nbsp;</td></tr>
-
-<tr><td><b>Development</b></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="https://github.com/spotbugs/spotbugs/issues">Open bugs</a></font></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="reportingBugs.html">Reporting bugs</a></font></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="contributing.html">Contributing</a></font></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="team.html">Dev team</a></font></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="api/index.html">API</a> <a class="sidebar" href="api/overview-summary.html">[no frames]</a></font></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="Changes.html">Change log</a></font></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="https://github.com/spotbugs/spotbugs">GitHub project page</a></font></td></tr> 
-</table> 
-</td>
-<td align="left" valign="top">
-<h1>FindBugs Bug Descriptions</h1>
-<p>This document lists the standard bug patterns reported by
-<a href="http://findbugs.sourceforge.net">SpotBugs</a> version 3.1.0-dev-20161105-d07b50f.</p>
+<h1>SpotBugs Bug Descriptions</h1>
 <h2>Summary</h2>
 <table width="100%">
 <tr bgcolor="#b9b9fe"><th>Description</th><th>Category</th></tr>
@@ -5482,10 +5458,8 @@ value. Check for errors (should it have been initialized?), or remove it if it i
          <li>org.w3c.dom.Document.create<i>XXXX</i></li>
       </ul>
       <p>for details.</p>
+        </section>
+      </div>
+    </div>
       
-    
-
-
-<hr> 
-</td></tr></table>
 </body></html>
