Replace FindBugs with SpotBugs in two files, though this is only a subset of what needs to be changed.

--- a/reportingBugs.html
+++ b/reportingBugs.html
@@ -74,7 +74,7 @@ use the bug tracker.
 <h2>False and Inaccurate Warnings</h2>
 
 <p>
-    Like most bug-detection tools based on static analysis, FindBugs
+    Like most bug-detection tools based on static analysis, SpotBugs
     issues some warnings that do not correspond to real bugs.&nbsp;
     While in general we would like to make the percentage of such warnings
     small, we can never fully eliminate them.
@@ -89,7 +89,7 @@ When reporting a bug, please include the following information:
 <li>Complete list of steps to reproduce the problem</li>
 <li>If the error occurs during analysis, a jar file, class file,
     or self-contained Java class that demonstrates the problem</li>
-<li>FindBugs version</li>
+<li>SpotBugs version</li>
 <li>JDK/JRE version</li>
 <li>Host operating system</li>
 <li>Any exception traces, Eclipse error log entries, etc. that might
