--- a/sysprops.html
+++ b/sysprops.html
@@ -1,48 +1,14 @@
 <html>
 <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 <title>SpotBugs Optional System Properties</title>
-<link rel="stylesheet" type="text/css" href="spotbugs.css">
 </head>
 <body>
-
-<table width="100%"><tr>
-
-
-<td bgcolor="#b9b9fe" valign="top" align="left" width="20%"> 
-<table width="100%" cellspacing="0" border="0"> 
-<tr><td><a class="sidebar" href="index.html"><img width="200px" src="spotbugs-icon.png" alt="SpotBugs"></a></td></tr> 
-
-<tr><td>&nbsp;</td></tr>
-
-<tr><td><b>Docs and Info</b></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="factSheet.html">Fact sheet</a></font></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="manual/index.html">Manual</a></font></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="ja/manual/index.html">Manual(ja/&#26085;&#26412;&#35486;)</a></font></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="FAQ.html">FAQ</a></font></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="bugDescriptions.html">Bug descriptions</a></font></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="bugDescriptions_ja.html">Bug descriptions(ja/&#26085;&#26412;&#35486;)</a></font></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="bugDescriptions_fr.html">Bug descriptions(fr)</a></font></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="links.html">Links</a></font></td></tr> 
-
-<tr><td>&nbsp;</td></tr>
-
-<tr><td><a class="sidebar" href="downloads.html"><b>Downloads</b></a></td></tr> 
-
-
-<tr><td>&nbsp;</td></tr>
-
-<tr><td><b>Development</b></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="https://github.com/spotbugs/spotbugs/issues">Open bugs</a></font></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="reportingBugs.html">Reporting bugs</a></font></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="contributing.html">Contributing</a></font></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="team.html">Dev team</a></font></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="api/index.html">API</a> <a class="sidebar" href="api/overview-summary.html">[no frames]</a></font></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="Changes.html">Change log</a></font></td></tr> 
-<tr><td><font size="-1">&nbsp;<a class="sidebar" href="https://github.com/spotbugs/spotbugs">GitHub project page</a></font></td></tr> 
-</table> 
-</td>
-
-<td align="left" valign="top">
 
 <h1>SpotBugs Optional System Properties</h1>
 
@@ -175,11 +141,15 @@ gives information if the field is set to true.
 </table>
 
 
-<hr> 
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-</td>
+  ga('create', 'UA-86930553-1', 'auto');
+  ga('send', 'pageview');
 
-</tr></table>
-
+</script>
 </body>
 </html>
