use bugDescriptions at readthedocs.org

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 <h3>
 <a id="bug-descriptions" class="anchor" href="#bug-descriptions" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Bug Descriptions</h3>
 
-<p>SpotBugs checks for more that 400 bug patterns. Bug descriptions can be found <a href="/bugDescriptions.html">here</a></p>
+<p>SpotBugs checks for more that 400 bug patterns. Bug descriptions can be found <a href="https://spotbugs.readthedocs.io/en/latest/bugDescriptions.html">here</a></p>
 
-<p>Descriptions are also available in <a href="/bugDescriptions_ja.html">Japanese</a> and <a href="/bugDescriptions_fr.html">French</a></p>
+<p>Descriptions are also available in <a href="https://spotbugs.readthedocs.io/ja/latest/bugDescriptions.html">Japanese</a> and <a href="/bugDescriptions_fr.html">French</a></p>
 
 <h3>
 <a id="using-spotbugs" class="anchor" href="#using-spotbugs" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Using SpotBugs</h3>
