--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <ul>
 <li>Ant</li>
 <li><a href="http://gleclaire.github.io/findbugs-maven-plugin/">Maven</a></li>
-<li><a href="https://docs.gradle.org/current/userguide/findbugs_plugin.html">Gradle</a></li>
+<li><a href="https://plugins.gradle.org/plugin/com.github.spotbugs">Gradle</a></li>
 <li>Eclipse</li>
 </ul>
 
