Update manual site to follow recent changes (#15)
* use bugDescriptions at readthedocs.org

* fix typos and wrong info, which does not exist in params.json

* replace findbugs gradle plugin with spotbugs plugin

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 
 <p>SpotBugs is the spiritual successor of <a href="http://findbugs.sourceforge.net/">FindBugs</a>, carrying on from the point where it left off with support of its community.</p>
 
-<p>SpotBugs requires JRE (or JDK) 1.8.0 or later to run.  However, it can analyze programs compiled for any version of Java, from 1.0 to 1.9.</p>
+<p>SpotBugs requires JRE (or JDK) 1.8.0 or later to run.  However, it can analyze programs compiled for any version of Java, from 1.0 to 1.8.</p>
 
 <h3>
 <a id="bug-descriptions" class="anchor" href="#bug-descriptions" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Bug Descriptions</h3>
 
-<p>SpotBugs checks for more that 400 bug patterns. Bug descriptions can be found <a href="/bugDescriptions.html">here</a></p>
+<p>SpotBugs checks for more than 400 bug patterns. Bug descriptions can be found <a href="https://spotbugs.readthedocs.io/en/latest/bugDescriptions.html">here</a></p>
 
-<p>Descriptions are also available in <a href="/bugDescriptions_ja.html">Japanese</a> and <a href="/bugDescriptions_fr.html">French</a></p>
+<p>Descriptions are also available in <a href="https://spotbugs.readthedocs.io/ja/latest/bugDescriptions.html">Japanese</a> and <a href="/bugDescriptions_fr.html">French</a></p>
 
 <h3>
 <a id="using-spotbugs" class="anchor" href="#using-spotbugs" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Using SpotBugs</h3>
@@ -48,7 +48,7 @@
 <ul>
 <li>Ant</li>
 <li><a href="http://gleclaire.github.io/findbugs-maven-plugin/">Maven</a></li>
-<li><a href="https://docs.gradle.org/current/userguide/findbugs_plugin.html">Gradle</a></li>
+<li><a href="https://plugins.gradle.org/plugin/com.github.spotbugs">Gradle</a></li>
 <li>Eclipse</li>
 </ul>
 
