--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <li>Ant</li>
 <li><a href="http://gleclaire.github.io/findbugs-maven-plugin/">Maven</a></li>
 <li><a href="https://plugins.gradle.org/plugin/com.github.spotbugs">Gradle</a></li>
-<li>Eclipse</li>
+<li><a href="http://spotbugs.readthedocs.io/en/latest/eclipse.html">Eclipse</a></li>
 </ul>
 
 <h3>
