--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <p>SpotBugs can be used standalone and through several integrations, including:</p>
 
 <ul>
-<li>Ant</li>
+<li><a href="http://spotbugs.readthedocs.io/en/latest/ant.html">Ant</a></li>
 <li><a href="http://gleclaire.github.io/findbugs-maven-plugin/">Maven</a></li>
 <li><a href="https://plugins.gradle.org/plugin/com.github.spotbugs">Gradle</a></li>
 <li><a href="http://spotbugs.readthedocs.io/en/latest/eclipse.html">Eclipse</a></li>
