Cleanup the repository from obsoleted files #20

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <p>SpotBugs checks for more than 400 bug patterns. Bug descriptions can be found <a href="https://spotbugs.readthedocs.io/en/latest/bugDescriptions.html">here</a></p>
 
-<p>Descriptions are also available in <a href="https://spotbugs.readthedocs.io/ja/latest/bugDescriptions.html">Japanese</a> and <a href="/bugDescriptions_fr.html">French</a></p>
+<p>Descriptions are also available in <a href="https://spotbugs.readthedocs.io/ja/latest/bugDescriptions.html">Japanese</a></p>
 
 <h3>
 <a id="using-spotbugs" class="anchor" href="#using-spotbugs" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Using SpotBugs</h3>
