link to m2e-code-quality
you'll probably want to merge this only after https://github.com/m2e-code-quality/m2e-code-quality/pull/113 for https://github.com/m2e-code-quality/m2e-code-quality/issues/110 has actually been merged? ;-) (and FYI @ArloL and @sewe)

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 <li><a href="http://spotbugs.readthedocs.io/en/latest/eclipse.html">Eclipse</a></li>
 </ul>
 
+To automatically configure the Eclipse SpotBugs plugin from the SpotBugs Maven plugin configuration, use <a href="https://github.com/m2e-code-quality/m2e-code-quality/">m2e-code-quality</a>.
+          
 <h3>
 <a id="extensions" class="anchor" href="#extensions" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Extensions</h3>
 
