--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
 <ul>
 <li><a href="http://spotbugs.readthedocs.io/en/latest/ant.html">Ant</a></li>
-<li><a href="https://github.com/hazendaz/findbugs-maven-plugin/tree/spotbugs">Maven</a></li>
-<li><a href="https://plugins.gradle.org/plugin/com.github.spotbugs">Gradle</a></li>
+<li><a href="http://spotbugs.readthedocs.io/en/latest/maven.html">Maven</a></li>
+<li><a href="http://spotbugs.readthedocs.io/en/latest/gradle.html">Gradle</a></li>
 <li><a href="http://spotbugs.readthedocs.io/en/latest/eclipse.html">Eclipse</a></li>
 </ul>
 
