Fix license name

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content" class="two-column">
-          <p>SpotBugs is a program which uses static analysis to look for bugs in Java code.  It is free software, distributed under the terms of the <a href="http://www.gnu.org/licenses/lgpl.html">Lesser GNU Public License</a>.</p>
+          <p>SpotBugs is a program which uses static analysis to look for bugs in Java code.  It is free software, distributed under the terms of the <a href="http://www.gnu.org/licenses/lgpl.html">GNU Lesser General Public License</a>.</p>
 
 <p>SpotBugs is the spiritual successor of <a href="http://findbugs.sourceforge.net/">FindBugs</a>, carrying on from the point where it left off with support of its community. Please check <a href="http://spotbugs.readthedocs.io/en/latest/">official manual site</a> for details.</p>
 
