add link to vimhelp :compiler extension
spread the word

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 <li><a href="http://spotbugs.readthedocs.io/en/latest/maven.html">Maven</a></li>
 <li><a href="http://spotbugs.readthedocs.io/en/latest/gradle.html">Gradle</a></li>
 <li><a href="http://spotbugs.readthedocs.io/en/latest/eclipse.html">Eclipse</a></li>
+<li><a href="https://vimhelp.org/quickfix.txt.html#compiler-spotbugs">(Neo)Vim</a></li>
 </ul>
 
 To automatically configure the Eclipse SpotBugs plugin from the SpotBugs Maven plugin configuration, use <a href="https://github.com/m2e-code-quality/m2e-code-quality/">m2e-code-quality</a>.
